--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <span class="footer">
-                <h2>QR Code Generator</h2>
+                <h2>copyright &copy ~Shivansh upadhyay 2022</h2>
             </span>
         </div>
     </section>
