--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input type="text" autocomplete="off" placeholder="Enter Your Text" class="page1_input" id="page1-input">
                 <div class="button-container">
                     <a id="submit-btn" class="button" onclick="btnStyle(1)">Generate QR</a>
-<!--                     <a class="button" id="download-btn" onclick="btnStyle(2)" href="" download="">Download</a> -->
+                    <a class="button" id="download-btn" onclick="btnStyle(2)" href="" download="">Download</a>
                 </div>
             </div>
 
